Activation du menu quand on change de page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{> nav}}
 {{> axe}}
 <!--<h2>{{titre}}</h2>-->
-<article>
+<article class="accueil">
     <ul>
         {{#each collections.posts}}
             <li>
