--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -16,8 +16,8 @@
 }
 
 .nav-accueil--active {
-	border-bottom: solid 3px black;
-	color: black;	
+	border-bottom: solid 3px hsl(0, 0%, 20%);
+	color: hsl(0, 0%, 20%);	
 }
 
 .nav-prevention {
@@ -26,18 +26,8 @@
 }
 
 .nav-prevention--active {
-	border-bottom: solid 3px #6AA84F;
-	color: black;	
-}
-
-.nav-formation {
-	padding-bottom: 5px;
-	/*font-variant: small-caps;*/
-}
-
-.nav-formation--active {
-	border-bottom: solid 3px #E69138;
-	color: black;	
+	border-bottom: solid 3px #85B2CA;
+	color: hsl(0, 0%, 20%);	
 }
 
 .nav-recherche {
@@ -46,6 +36,16 @@
 }
 
 .nav-recherche--active {
-	border-bottom: solid 3px #597EAA;
-	color: black;	
+	border-bottom: solid 3px #B0A1CD;
+	color: hsl(0, 0%, 20%);	
+}
+
+.nav-formation {
+	padding-bottom: 5px;
+	/*font-variant: small-caps;*/
+}
+
+.nav-formation--active {
+	border-bottom: solid 3px #ED6DA2;
+	color: hsl(0, 0%, 20%);	
 }
