modification des urls

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,18 +6,18 @@
     <ul>
         {{#each collections.posts}}
             <li>
-                <div class="article">
-                    <!--<div class="article-image"><img src="./img/150x150.gif" alt=""></div>-->
-                    <a class="article-titre" href="/{{path}}">{{titre}}</a>
-                    <div class="article-detail">
+                <div class="articleResume">
+                    <!--<div class="articleResume-image"><img src="./img/150x150.gif" alt=""></div>-->
+                    <a class="articleResume-titre" href="/{{path}}">{{titre}}</a>
+                    <div class="articleResume-detail">
                         <span class="icon-calendar"></span>
-                        <span class="article-date u-mlxs">{{dateAffichage}}</span>
+                        <span class="articleResume-date u-mlxs">{{dateAffichage}}</span>
                         <span class="icon-location u-mlm"></span>
-                        <span class="article-ville u-mlxs">{{ville}} ({{departement}})</span>
+                        <span class="articleResume-ville u-mlxs">{{ville}} ({{departement}})</span>
                     </div>
                     <div>
-                        <div class="article-contenu">
-                            <span class="article-resume ellipsis">{{&resume}}</span><span>...</span>
+                        <div class="articleResume-contenu">
+                            <span class="articleResume-resume ellipsis">{{&resume}}</span><span>...</span>
                             <div class="readMore">
                                 <a href="/{{path}}">Lire l'article</a>
                             </div>
