--- a/layouts/post.html
+++ b/layouts/post.html
@@ -1,21 +1,19 @@
 {{>header}}
 {{> nav}}
-<div class="post">
-    <div class="article">
-        <!--<div class="article-image"><img src="./img/150x150.gif" alt=""></div>-->
-        <h1 class="article-titre" href="/{{path}}">{{titre}}</h1>
-        <div class="article-detail">
-            <span class="icon-calendar"></span>
-            <span class="article-date u-mlxs">{{dateAffichage}}</span>
-  {{#ville}}<span class="icon-location u-mlm"></span>
-            <span class="article-ville u-mlxs">{{ville}}</span>{{/ville}}
-        </div>
-        <div>
-            <div class="article-contenu">
-                <span class="article-resume ellipsis">{{&contents}}</span>
-            </div>
-        </div>
-        <div class="clear"></div>
+<div class="articleDetail {{axe}}">
+    <!--<div class="articleDetail-image"><img src="./img/150x150.gif" alt=""></div>-->
+    <h1 class="articleDetail-titre" href="/{{path}}">{{titre}}</h1>
+    <div class="articleDetail-detail">
+        <span class="icon-calendar"></span>
+        <span class="articleDetail-date u-mlxs">{{dateAffichage}}</span>
+{{#ville}}<span class="icon-location u-mlm"></span>
+        <span class="articleDetail-ville u-mlxs">{{ville}}</span>{{/ville}}
     </div>
+    <div>
+        <div class="articleDetail-contenu">
+            <span class="articleDetail-resume ellipsis">{{&contents}}</span>
+        </div>
+    </div>
+    <div class="clear"></div>
 </div>
 {{>footer}}
