Activation du menu dans les articles + ajout des en-têtes dans chaque article suivant l'axe

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../../css/icon.css">
         <link rel="stylesheet" href="../../css/app.css">
         <link rel="stylesheet" href="../../css/nav.css">
-        <link rel="stylesheet" href="../../css/article-resume.css">
+        <link rel="stylesheet" href="../../css/article.css">
         <link rel="stylesheet" href="../../css/article-detail.css">
         <link rel="stylesheet" href="../../css/formulaireContact.css">
         <link rel="stylesheet" href="../../css/apropos.css">
