--- a/layouts/post.html
+++ b/layouts/post.html
@@ -1,19 +1,22 @@
 {{>header}}
 {{> nav}}
-<div class="articleDetail {{axe}}">
-    <!--<div class="articleDetail-image"><img src="./img/150x150.gif" alt=""></div>-->
-    <h1 class="articleDetail-titre" href="/{{path}}">{{titre}}</h1>
-    <div class="articleDetail-detail">
-        <span class="icon-calendar"></span>
-        <span class="articleDetail-date u-mlxs">{{dateAffichage}}</span>
-{{#ville}}<span class="icon-location u-mlm"></span>
-        <span class="articleDetail-ville u-mlxs">{{ville}}</span>{{/ville}}
-    </div>
-    <div>
-        <div class="articleDetail-contenu">
-            <span class="articleDetail-resume ellipsis">{{&contents}}</span>
-        </div>
-    </div>
-    <div class="clear"></div>
+{{#isAxePrevention}}
+<div class="prevention">
+    {{> axePrevention}}
 </div>
+{{/isAxePrevention}}
+{{#isAxeRecherche}}
+<div class="recherche">
+    {{> axeRecherche}}
+</div>
+{{/isAxeRecherche}}
+{{#isAxeFormation}}
+<div class="formation">
+    {{> axeFormation}}
+</div>
+{{/isAxeFormation}}
+<article id="js-{{axe}}" class="articleDetail">
+    {{> articleInfo}}
+    {{&contents}}
+</article>
 {{>footer}}
