--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,31 +2,13 @@
 {{> nav}}
 {{> axe}}
 <!--<h2>{{titre}}</h2>-->
-<article class="accueil">
+<div id="js-accueil">
     <ul>
         {{#each collections.posts}}
             <li>
-                <div class="articleResume">
-                    <!--<div class="articleResume-image"><img src="./img/150x150.gif" alt=""></div>-->
-                    <a class="articleResume-titre" href="/{{path}}">{{titre}}</a>
-                    <div class="articleResume-detail">
-                        <span class="icon-calendar"></span>
-                        <span class="articleResume-date u-mlxs">{{dateAffichage}}</span>
-                        <span class="icon-location u-mlm"></span>
-                        <span class="articleResume-ville u-mlxs">{{ville}} ({{departement}})</span>
-                    </div>
-                    <div>
-                        <div class="articleResume-contenu">
-                            <span class="articleResume-resume ellipsis">{{&resume}}</span><span>...</span>
-                            <div class="readMore">
-                                <a href="/{{path}}">Lire l'article</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="clear"></div>
-                </div>
+                {{> articleResume}}
             </li>
         {{/each}}
     </ul>
-</article>
+</div>
 {{> footer}}
