--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,15 +1,20 @@
 html {
     font-family: 'font-regular';
-/*    font-size: 16px;*/
     line-height: 1.4rem;
-/*    margin: 30px;*/
+}
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5 {
+    font-weight: normal;
 }
 
 a {
     text-decoration: none;
     color: inherit;
 }
-
 
 .clear {
     clear: both;
