--- a/layouts/partials/article-resume.html
+++ b/layouts/partials/article-resume.html
@@ -3,9 +3,7 @@
     <div>
         <div class="article-contenu">
             <p>{{&resume}}<span> ...</span></p>
-            <div class="readMore">
-                <a href="/{{path}}">Lire l'article</a>
-            </div>
+            <a class="readMore" href="/{{path}}">Lire la suite</a>
         </div>
     </div>
     <div class="clear"></div>
