--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -51,5 +51,5 @@
 .nav-formation:hover,
 .nav-formation--active {
 	border-bottom: solid 3px #ED6DA2;
-	color: hsl(0, 0%, 20%);	
+	color: hsla(0, 0%, 0%, .7);	
 }
