--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,6 +15,21 @@ h5 {
 a {
     text-decoration: none;
     color: inherit;
+    position: relative;
+}
+
+a.readmore:hover{
+    text-decoration: none;
+}
+
+a.readMore:hover::after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 5px;
+    border-width: 0 0 1px;
+    border-style: solid;
 }
 
 .clear {
