--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,18 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{this.titre}}</title>
         <!-- build:css ../../src/css/combined.css -->
-        <link rel="stylesheet" href="../../src/vendor/normalize.css">
-        <link rel="stylesheet" href="../../src/vendor/base.css">
-        <link rel="stylesheet" href="../../src/css/index.css">     
-        <link rel="stylesheet" href="../../src/css/font.css">
-        <link rel="stylesheet" href="../../src/css/icon.css">
-        <link rel="stylesheet" href="../../src/css/app.css">
-        <link rel="stylesheet" href="../../src/css/nav.css">
-        <link rel="stylesheet" href="../../src/css/article.css">
-        <link rel="stylesheet" href="../../src/css/article-detail.css">
-        <link rel="stylesheet" href="../../src/css/formulaireContact.css">
-        <link rel="stylesheet" href="../../src/css/apropos.css">
-        <link rel="stylesheet" href="../../src/css/axe.css">    
+        <link rel="stylesheet" href="../../vendor/normalize.css">
+        <link rel="stylesheet" href="../../vendor/base.css">
+        <link rel="stylesheet" href="../../css/index.css">     
+        <link rel="stylesheet" href="../../css/font.css">
+        <link rel="stylesheet" href="../../css/icon.css">
+        <link rel="stylesheet" href="../../css/app.css">
+        <link rel="stylesheet" href="../../css/nav.css">
+        <link rel="stylesheet" href="../../css/article.css">
+        <link rel="stylesheet" href="../../css/article-detail.css">
+        <link rel="stylesheet" href="../../css/formulaireContact.css">
+        <link rel="stylesheet" href="../../css/apropos.css">
+        <link rel="stylesheet" href="../../css/axe.css">    
         <!-- endbuild -->    
     </head>
     <body>
