--- a/layouts/partials/article-resume.html
+++ b/layouts/partials/article-resume.html
@@ -2,7 +2,7 @@
     {{> articleInfo}}
     <div>
         <div class="article-contenu">
-            <p>{{&resume}}<span> ...</span></p>
+            <p>{{&excerpt}}<span> ...</span></p>
             <a class="readMore" href="/{{path}}">Lire la suite</a>
         </div>
     </div>
