--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,6 @@
         <!-- build:css ../../src/css/combined.css -->
         <link rel="stylesheet" href="../../vendor/normalize.css">
         <link rel="stylesheet" href="../../vendor/base.css">
-        <link rel="stylesheet" href="../../css/index.css">     
         <link rel="stylesheet" href="../../css/font.css">
         <link rel="stylesheet" href="../../css/icon.css">
         <link rel="stylesheet" href="../../css/app.css">
@@ -17,6 +16,7 @@
         <link rel="stylesheet" href="../../css/formulaireContact.css">
         <link rel="stylesheet" href="../../css/apropos.css">
         <link rel="stylesheet" href="../../css/axe.css">    
-        <!-- endbuild -->    
+        <link rel="stylesheet" href="../../css/rwd.css">     
+        <!-- endbuild -->
     </head>
     <body>
