--- a/layouts/post.html
+++ b/layouts/post.html
@@ -7,10 +7,11 @@
     <article class="articleDetail">
         {{> articleInfo}}
         {{&contents}}
-        <ul>
+        <ul>            
         {{#each documents}}
-        <li>
-            <a href="assets/posts/formation-2015-01/{{@key}}"><span class="icon-pdf">{{this}}</span></a>
+        <li class="pdf-bloc">
+            <a href="../../assets/{{../pdfRelativeDir}}/{{@key}}"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">{{this}}</span></a>
+            <div class="pdf-nomFichier">{{@key}}</div>
         </li>
         {{/each}}
         </ul>
