--- a/layouts/post.html
+++ b/layouts/post.html
@@ -14,6 +14,12 @@
             <div class="pdf-nomFichier">{{@key}}</div>
         </li>
         {{/each}}
+        {{#isAxeFormation}}
+        <li class="pdf-bloc">
+            <a href="../../assets/pdf/reglement-interieur-formation-apropos.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">réglement intérieur formation "a propos"</span></a>
+            <div class="pdf-nomFichier">reglement-interieur-formation-apropos.pdf</div>
+        </li>
+        {{/isAxeFormation}}      
         </ul>
     </article>
 </div>
