--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,9 +3,9 @@
 {{> axe}}
 <!--<h2>{{titre}}</h2>-->
 <div id="js-accueil">
-    <ul>
+    <ul class="grid">
         {{#each collections.posts}}
-            <li>
+            <li class="col-1-2">
                 {{> articleResume}}
             </li>
         {{/each}}
