--- a/layouts/partials/article-resume.html
+++ b/layouts/partials/article-resume.html
@@ -1,4 +1,4 @@
-<div class="articleResume">
+<div class="articleResume mod">
     {{> articleInfo}}
     <div>
         <div class="article-contenu">
