--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,8 @@
         <link rel="stylesheet" href="../../css/formulaireContact.css">
         <link rel="stylesheet" href="../../css/apropos.css">
         <link rel="stylesheet" href="../../css/axe.css">    
-        <link rel="stylesheet" href="../../css/rwd.css">     
+        <link rel="stylesheet" href="../../css/rwd.css">   
+        <link rel="stylesheet" href="../../css/grid.css">  
         <!-- endbuild -->
     </head>
     <body>
