--- a/css/grid.css
+++ b/css/grid.css
@@ -1,3 +1,4 @@
+/*
 .grid{
   background-color: hsla(0, 0%, 0%, 0.1);
   padding: 20px;
@@ -12,14 +13,11 @@
 .mod{
   padding: 20px;
   background: hsla(0, 0%, 0%, 0) none repeat scroll 0% 0%;
-  /*border: 1px solid green;*/
 }
 
 [class*='col-'] {
   float: left;
   padding-right: 20px;
-  /*border: 1px solid red;
-  background-color: salmon;*/
 }
 .grid [class*='col-']:last-of-type {
   padding-right: 0;
@@ -27,4 +25,32 @@
 
 .col-1-2 {
   width: 50%;
+}*/
+.grid-2 {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin-left: -20px;
+	
+	/* Inline-block fallback */
+  letter-spacing: -0.31em;
+  text-rendering: optimizespeed;
+	padding: 20px;
+}
+.grid-2 > * {
+	flex: 0 0 auto;
+	width: calc(50% - 20px); 
+	margin-left: 20px;
+	display: block;  /* IE fix */
+	
+	/* Inline-block fallback */
+  display: inline-block;
+  vertical-align: top;
+  letter-spacing: normal;
+	text-rendering: auto;
+}
+
+[class*="grid-"] > div {  
+  margin-bottom: 20px; 
+	padding: 1em;
 }
