--- a/layouts/partials/axe.html
+++ b/layouts/partials/axe.html
@@ -1,4 +1,4 @@
-<div class="axe">
+<div class="axe grid-axe">
     <div class="axePrevention">
         <svg class="axePrevention-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="17 -6 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
             <g id="Capa_29">
