--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,6 +1,6 @@
-<ul class="nav">
-	<li><span class="nav-accueil"><a href="/pages/index">Accueil</a></span></li>
-	<li><span class="nav-prevention"><a href="/pages/prevention">Prévention</a></span></li>
-	<li><span class="nav-recherche"><a href="/pages/recherche">Recherche</a></span></li>
-	<li><span class="nav-formation"><a href="/pages/formation">Formation</a></span></li>
-</ul>
+<div class="nav">
+	<div class="nav-item"><span class="nav-accueil"><a href="/pages/index">Accueil</a></span></div>
+	<div class="nav-item"><span class="nav-prevention"><a href="/pages/prevention">Prévention</a></span></div>
+	<div  class="nav-item"><span class="nav-recherche"><a href="/pages/recherche">Recherche</a></span></div>
+	<div  class="nav-item"><span class="nav-formation"><a href="/pages/formation">Formation</a></span></div>
+</div>
