--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{> nav}}
 {{> axe}}
 <!--<h2>{{titre}}</h2>-->
-<div id="js-accueil">
+<div id="js-accueil" class="accueil">
     <div class="grid-2 grid-article">
     {{#each collections.posts}}
         {{> articleResume}}
